[gd_scene load_steps=28 format=3 uid="uid://dp7uehr0563lr"]

[ext_resource type="Script" path="res://test_junk/archived for now/world_entity_player.gd" id="1_ipg1r"]
[ext_resource type="PackedScene" uid="uid://b1s71hosugqju" path="res://UI/inventory_gui.tscn" id="2_d62y5"]
[ext_resource type="PackedScene" uid="uid://0lvjbqc8s78" path="res://test_junk/debug_3d_text_world.tscn" id="3_t5gxl"]
[ext_resource type="Script" path="res://Scenes/debug_3d_text_world.gd" id="4_6xxi7"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="5_mg7jg"]
[ext_resource type="PackedScene" uid="uid://dahgwygsnsabn" path="res://Scenes/state_chart_world.tscn" id="6_u1bgi"]
[ext_resource type="Script" path="res://Logic/scripts/animations.gd" id="7_6r7cw"]
[ext_resource type="PackedScene" uid="uid://b3707fwdhap4h" path="res://UI/status_hud.tscn" id="8_f75db"]
[ext_resource type="SpriteFrames" uid="uid://djkna70chus8q" path="res://Resources/SpriteFrames/player.tres" id="9_fixp6"]
[ext_resource type="AnimationLibrary" uid="uid://bia4tx8dc3gjm" path="res://Resources/AnimationLibrary/default_player.tres" id="10_jduho"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://q575ewtqb03g" path="res://Resources/AnimationNodeStateMachine/default.tres" id="11_e3op7"]
[ext_resource type="Script" path="res://Logic/scripts/character_animation_tree.gd" id="12_n20no"]
[ext_resource type="PackedScene" uid="uid://r6lxipom563d" path="res://Logic/components/component_interaction.tscn" id="13_6i0ms"]
[ext_resource type="PackedScene" uid="uid://c20wjgqsafufi" path="res://Logic/components/component_equipment.tscn" id="14_urlep"]
[ext_resource type="PackedScene" uid="uid://cjip6juyime05" path="res://Logic/components/component_gloam_manager.tscn" id="15_iwcjq"]
[ext_resource type="Script" path="res://Logic/components/component_inventory.gd" id="16_jga13"]
[ext_resource type="PackedScene" uid="uid://ci3yj38s28xgq" path="res://Logic/components/component_ability.tscn" id="17_0mge5"]
[ext_resource type="Script" path="res://Logic/components/component_respawn_handler.gd" id="18_fqgjh"]
[ext_resource type="Script" path="res://Logic/components/component_party.gd" id="19_2gslx"]
[ext_resource type="Script" path="res://Logic/components/component_state_controller_world.gd" id="20_uxl1j"]
[ext_resource type="Script" path="res://Logic/components/component_health.gd" id="21_ps8po"]
[ext_resource type="Script" path="res://Logic/components/component_vis.gd" id="22_b7bkg"]
[ext_resource type="Script" path="res://Logic/components/component_movement_controller.gd" id="23_v4hps"]
[ext_resource type="Script" path="res://Logic/components/component_input_controller_manual.gd" id="24_7xcav"]
[ext_resource type="Script" path="res://Logic/components/component_animation_controller_world.gd" id="25_40qyk"]
[ext_resource type="Script" path="res://Logic/components/component_physics.gd" id="26_y7boe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h7j1u"]
radius = 0.258558
height = 1.11006

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("my_component_movement_controller", "my_component_input_controller", "my_component_party", "my_component_ability", "my_component_inventory", "my_component_respawn_handler", "my_component_equipment", "my_component_interaction", "my_inventory_gui", "gloam_manager", "state_chart", "collider", "animations", "my_component_health", "my_component_vis", "my_component_state_controller_world") groups=["load_data_all", "load_data_scene", "save_data_all", "save_data_scene"]]
physics_interpolation_mode = 1
collision_layer = 5
collision_mask = 5
script = ExtResource("1_ipg1r")
my_component_movement_controller = NodePath("Components/component_movement_controller")
my_component_input_controller = NodePath("Components/component_input_controller_manual")
my_component_party = NodePath("Components/component_party")
my_component_ability = NodePath("Components/component_ability")
my_component_inventory = NodePath("Components/component_inventory")
my_component_respawn_handler = NodePath("Components/component_respawn_handler")
my_component_equipment = NodePath("Components_3D/component_equipment")
my_component_interaction = NodePath("Components_3D/component_interaction")
my_inventory_gui = NodePath("Inventory_GUI")
gloam_manager = NodePath("Components_3D/component_gloam_manager")
state_chart = NodePath("StateChart")
collider = NodePath("CollisionShape3D")
animations = NodePath("Animations")
my_component_health = NodePath("Components/component_health")
my_component_vis = NodePath("Components/component_vis")
my_component_state_controller_world = NodePath("Components/component_state_controller_world")
alignment = "FRIENDS"
classification = "PLAYER"

[node name="FaceLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.125)
light_energy = 0.3
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 0.0
omni_range = 0.513
omni_attenuation = 0.2

[node name="Inventory_GUI" parent="." node_paths=PackedStringArray("my_component_party", "my_component_inventory") instance=ExtResource("2_d62y5")]
my_component_party = NodePath("../Components/component_party")
my_component_inventory = NodePath("../Components/component_inventory")

[node name="DEBUG_3D_TEXT_WORLD" parent="." instance=ExtResource("3_t5gxl")]
script = ExtResource("4_6xxi7")

[node name="StateChartDebugger" parent="." instance=ExtResource("5_mg7jg")]
offset_right = -1543.0
offset_bottom = -689.0
initial_node_to_watch = NodePath("../StateChart")

[node name="StateChart" parent="." instance=ExtResource("6_u1bgi")]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.028, 0.06, 0.008)
shape = SubResource("CapsuleShape3D_h7j1u")

[node name="Animations" type="Node3D" parent="."]
script = ExtResource("7_6r7cw")

[node name="character_sprite_position" type="Node3D" parent="Animations"]

[node name="selector_anchor" type="Marker3D" parent="Animations/character_sprite_position"]

[node name="status_hud" parent="Animations/character_sprite_position" node_paths=PackedStringArray("my_component_health", "my_component_vis", "collider") instance=ExtResource("8_f75db")]
my_component_health = NodePath("../../../Components/component_health")
my_component_vis = NodePath("../../../Components/component_vis")
collider = NodePath("../../../CollisionShape3D")

[node name="character_animation_sprite" type="AnimatedSprite3D" parent="Animations"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
shaded = true
alpha_cut = 2
texture_filter = 0
render_priority = -1
sprite_frames = ExtResource("9_fixp6")
animation = &"default_idle_down"
frame = 1

[node name="RemoteTransform3DPosition" type="RemoteTransform3D" parent="Animations/character_animation_sprite"]
remote_path = NodePath("../../character_sprite_position")
update_rotation = false
update_scale = false

[node name="character_animation_player" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../character_animation_sprite")
libraries = {
"": ExtResource("10_jduho")
}

[node name="character_animation_tree" type="AnimationTree" parent="Animations"]
active = false
root_node = NodePath("../character_animation_sprite")
tree_root = ExtResource("11_e3op7")
anim_player = NodePath("../character_animation_player")
parameters/Death/TimeScale/scale = 1.0
parameters/Hurt/TimeScale/scale = 1.0
parameters/Idle/BlendSpace2D/blend_position = Vector2(-0.0046773, 0.0187266)
parameters/Idle/TimeScale/scale = 1.0
parameters/Walk/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/Walk/TimeScale/scale = 1.0
script = ExtResource("12_n20no")

[node name="Components_3D" type="Node3D" parent="."]

[node name="component_interaction" parent="Components_3D" instance=ExtResource("13_6i0ms")]

[node name="component_equipment" parent="Components_3D" node_paths=PackedStringArray("gloam_manager") instance=ExtResource("14_urlep")]
gloam_manager = NodePath("../component_gloam_manager")

[node name="component_gloam_manager" parent="Components_3D" node_paths=PackedStringArray("equipment") instance=ExtResource("15_iwcjq")]
equipment = NodePath("../component_equipment")

[node name="Components" type="Node" parent="."]

[node name="component_inventory" type="Node" parent="Components"]
script = ExtResource("16_jga13")

[node name="component_ability" parent="Components" instance=ExtResource("17_0mge5")]

[node name="component_respawn_handler" type="Node" parent="Components"]
script = ExtResource("18_fqgjh")

[node name="component_party" type="Node" parent="Components"]
script = ExtResource("19_2gslx")

[node name="component_state_controller_world" type="Node" parent="Components" node_paths=PackedStringArray("my_component_input_controller")]
script = ExtResource("20_uxl1j")
my_component_input_controller = NodePath("../component_input_controller_manual")

[node name="component_health" type="Node" parent="Components" node_paths=PackedStringArray("status_hud")]
script = ExtResource("21_ps8po")
max_health = 20
status_hud = NodePath("../../Animations/character_sprite_position/status_hud")

[node name="component_vis" type="Node" parent="Components" node_paths=PackedStringArray("status_hud")]
script = ExtResource("22_b7bkg")
max_vis = 12
status_hud = NodePath("../../Animations/character_sprite_position/status_hud")

[node name="component_movement_controller" type="Node" parent="Components" node_paths=PackedStringArray("my_component_input_controller", "my_component_physics")]
script = ExtResource("23_v4hps")
my_component_input_controller = NodePath("../component_input_controller_manual")
my_component_physics = NodePath("../component_physics")

[node name="component_input_controller_manual" type="Node" parent="Components" node_paths=PackedStringArray("my_component_interaction", "my_component_equipment")]
script = ExtResource("24_7xcav")
my_component_interaction = NodePath("../../Components_3D/component_interaction")
my_component_equipment = NodePath("../../Components_3D/component_equipment")

[node name="component_animation_controller_world" type="Node" parent="Components" node_paths=PackedStringArray("my_component_input_controller")]
script = ExtResource("25_40qyk")
my_component_input_controller = NodePath("../component_input_controller_manual")

[node name="component_physics" type="Node" parent="Components"]
script = ExtResource("26_y7boe")

[connection signal="animation_finished" from="Animations/character_animation_tree" to="Animations/character_animation_tree" method="_on_animation_finished"]
[connection signal="animation_started" from="Animations/character_animation_tree" to="Animations/character_animation_tree" method="_on_animation_started"]
